# riscv-emu-ass

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
assembler-cpp/: CMakeLists.txt
assembler-cpp/include/assembler/: driver.h  encode.h  lexer.h  parser.h  symbols.h
assembler-cpp/include/common/: isa.h  utils.h
assembler-cpp/include/decoder/: decoder.h  disassembler_driver.h  formatter.h
assembler-cpp/src/assembler/: driver.cpp  encode.cpp  lexer.cpp  main.cpp  parser.cpp  symbols.cpp
assembler-cpp/src/common/: utils.cpp
assembler-cpp/src/decoder/: decoder.cpp  disassembler_driver.cpp  formatter.cpp
assembler-cpp/tests/: run_tests.sh  test_assemble.cpp  test_dissasemble.cpp  test_golden.cpp
assembler-cpp/tests/data/: comprehensive.s  simple_add.s
isa/: Cargo.toml
isa-ffi/: Cargo.toml  Makefile  build.rs  cbindgen.toml
isa-ffi/src/: lib.rs
isa/src/: lib.rs
risc-programs/: branch_tests.s
