[package]
name = "isa-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C ABI shim for the isa crate"
build = "build.rs"

[lib]
name = "isa_ffi"
crate-type = ["staticlib", "cdylib"]   # static for linking, cdylib if you want a .so/.dll

[features]
default = ["std"]
std = ["isa/std"]

[dependencies]
isa = { path = "../isa", default-features = false }

[build-dependencies]
cbindgen = "0.29"
